@@ -1,10 +1,9 @@
 package samples;
 
-import sun.misc.BASE64Encoder;
-
 import java.io.FileInputStream;
 import java.security.*;
 import java.security.cert.X509Certificate;
+import java.util.Base64;
 
 public class CryptoTest {
 	public static void main(String[] args)
@@ -16,7 +15,7 @@ public class CryptoTest {
 		PrivateKey prk = (PrivateKey)ks.getKey("jpc", "jjjjjjjj".toCharArray());
 		MessageDigest md = MessageDigest.getInstance("SHA1");
 		byte[] digest = md.digest("This is the message".getBytes());
-		System.out.println("Digest=" + new BASE64Encoder().encode(digest));
+		System.out.println("Digest=" + new String(Base64.getEncoder().encode(digest)));
 		Signature s = Signature.getInstance("DSA");
 		s.initSign(prk);
 		s.update(digest);
@@ -28,7 +27,7 @@ public class CryptoTest {
 		System.out.println(ok ? "Message ok!" : "Message fake");
 		// take response tampered message
 		digest = md.digest("Fake message".getBytes());
-		System.out.println("Digest=" + new BASE64Encoder().encode(digest));
+		System.out.println("Digest=" + new String(Base64.getEncoder().encode(digest)));
 		s.initVerify(puk);
 		s.update(digest);
 		ok = s.verify(sign);
